--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             padding: 0;
         }
         header {
-            background-color: blue;
+            background-color: pink;
             color: white;
             padding: 20px;
             text-align: center;
@@ -26,11 +26,11 @@
 <body>
 
     <header>
-        Ansible Playbook is working
+        Ansible Playbook with jenkins
     </header>
 
     <main>
-        <p>Welcome to the Ansible playbook status page!</p>
+        <p>Welcome to the Ansible playbook with jenkins Project!</p>
     </main>
 
 </body>
